expo cam + console object detection

--- a/package.json
+++ b/package.json
@@ -2,30 +2,46 @@
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --device",
     "web": "expo start --web",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build:tailwind": "tailwindcss --input input.css --output tailwind.css --no-autoprefixer && tailwind-rn",
+    "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs": "^3.18.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "expo": "~41.0.1",
-    "expo-updates": "~0.5.4",
+    "expo-camera": "~11.0.2",
+    "expo-gl": "~10.2.0",
+    "expo-gl-cpp": "~10.1.0",
     "expo-splash-screen": "~0.10.2",
+    "expo-updates": "~0.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "0.64.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12"
+    "react-native-vision-camera": "^2.13.5",
+    "react-native-web": "~0.13.12",
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "~8.3.0",
+    "concurrently": "^7.2.2",
     "jest-expo": "~41.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4",
     "typescript": "~4.0.0"
   },
   "jest": {
