--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "react-native": "0.64.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "^2.8.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "^12.3.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-vision-camera": "^2.13.5",
     "react-native-web": "~0.13.12",
