--- a/ios/eagleapp2/Info.plist
+++ b/ios/eagleapp2/Info.plist
@@ -59,5 +59,7 @@
 	<string>Allow $(PRODUCT_NAME) to use the camera</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Allow $(PRODUCT_NAME) to use the microphone</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access to save photo in your photo library</string>
 </dict>
 </plist>
