--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "^2.8.0",
+    "react-native-redash": "^17.0.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.3.0",
     "react-native-unimodules": "~0.13.3",
