--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@expo-google-fonts/fira-code": "^0.2.2",
+    "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -17,31 +19,73 @@
     "@tensorflow-models/mobilenet": "^2.1.0",
     "@tensorflow/tfjs": "^3.18.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
+    "@tradle/react-native-http": "^2.0.0",
+    "@walletconnect/react-native-dapp": "^1.7.8",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "assert": "^1.1.1",
+    "browserify-zlib": "~0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "events": "^1.0.0",
     "expo": "~41.0.1",
     "expo-camera": "~11.0.2",
+    "expo-crypto": "^10.2.0",
+    "expo-font": "~9.1.0",
     "expo-gl": "~10.2.0",
     "expo-gl-cpp": "~10.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "https-browserify": "~0.0.0",
+    "path-browserify": "0.0.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "~0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.64.0",
+    "react-native-crypto": "^2.1.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-orientation-locker": "^1.5.0",
+    "react-native-os": "^1.0.1",
+    "react-native-randombytes": "^3.0.0",
     "react-native-reanimated": "^2.8.0",
     "react-native-redash": "^17.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.3.0",
+    "react-native-svg": "9.6.4",
+    "react-native-svg-icon": "^0.10.0",
+    "react-native-tcp": "^3.2.1",
+    "react-native-udp": "^2.1.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-vision-camera": "^2.13.5",
     "react-native-web": "~0.13.12",
-    "tailwind-rn": "^4.2.0"
+    "readable-stream": "1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "~0.10.25",
+    "tailwind-rn": "^4.2.0",
+    "timers-browserify": "^1.0.1",
+    "tty-browserify": "0.0.0",
+    "url": "~0.10.1",
+    "util": "~0.10.3",
+    "vm-browserify": "0.0.4",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.25",
+    "@storybook/react-native": "^6.0.1-beta.6",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-loader": "^8.2.5",
     "babel-preset-expo": "~8.3.0",
     "concurrently": "^7.2.2",
     "jest-expo": "~41.0.0",
@@ -52,5 +96,57 @@
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
