--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/fira-code": "^0.2.2",
     "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@tensorflow-models/coco-ssd": "^2.2.2",
@@ -49,10 +50,12 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-level-fs": "^3.0.0",
+    "react-native-modal": "^13.0.1",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-os": "^1.0.1",
     "react-native-randombytes": "^3.0.0",
     "react-native-reanimated": "^2.8.0",
+    "react-native-record-screen": "^0.4.0",
     "react-native-redash": "^17.0.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
