--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native": "0.64.0",
     "react-native-config": "^1.4.6",
     "react-native-crypto": "^2.1.0",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-level-fs": "^3.0.0",
